[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/BetterPixels.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/MenuBG3.png" type="Texture" id=3]
[ext_resource path="res://Assets/OldWizard.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/MenuBG1.png" type="Texture" id=5]
[ext_resource path="res://Assets/MenuBG2.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "menu",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 200
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "menu"
length = 3.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=11]
resource_name = "menu"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.2, 2.3, 2.4, 2.5, 2.8, 2.89554, 2.9, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 2, 0, 1, 0, 1 ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 960, 540 )
frames = SubResource( 9 )
animation = "menu"

[node name="Title" type="Label" parent="AnimatedSprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1863.0
margin_top = -463.0
margin_right = -673.0
margin_bottom = -263.0
custom_fonts/font = SubResource( 2 )
text = "Counterphobia"

[node name="Phobia" type="Label" parent="AnimatedSprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1211.0
margin_top = -463.0
margin_right = -21.0
margin_bottom = -263.0
custom_colors/font_color = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 2 )
text = "phobia"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -400.0
margin_right = 300.0

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "START"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 600.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "QUIT"

[node name="Black" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Fade" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/fade = SubResource( 8 )
anims/menu = SubResource( 10 )

[node name="MenuAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/menu = SubResource( 11 )

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
